Reorganization in Chapter 2

--- a/exercises/02_01_ex_30.tex
+++ b/exercises/02_01_ex_30.tex
@@ -1,4 +1,4 @@
-{Using the graph of $g(x)$ below, answer the following questions.
+{Using the graph of $g(x)$ below, answer the following questions.\vspace{-7pt}
 
 \noindent\begin{minipage}[t]{.49\linewidth}
 \begin{enumerate}
@@ -15,7 +15,7 @@
 \end{enumerate}
 \end{minipage}
 
-\myincludegraphics[scale=.8]{figures/fig02_01_ex_30}
+\myincludegraphics[scale=.7]{figures/fig02_01_ex_30}
 }
 {	\begin{enumerate}
 \item		Approximately on $(-1.5,1.5)$.
