--- a/exercises/02_01_ex_33.tex
+++ b/exercises/02_01_ex_33.tex
@@ -1,4 +1,4 @@
-{Give intervals on which each of the following functions are continuous.
+{Give intervals on which each of the following functions are continuous.\vspace{-5pt}
 
 \noindent\begin{minipage}[t]{.5\linewidth}
 \begin{enumerate}
