--- a/exercises/02_01_ex_34.tex
+++ b/exercises/02_01_ex_34.tex
@@ -1,5 +1,5 @@
 {Use the graph of $f(x)$ provided to answer the following.
-
+\vspace{-5pt}
 \noindent\begin{minipage}[t]{.5\linewidth}
 \begin{enumerate}
 \item		$\ds \lim_{x\to-3^-} f(x) = $?
