--- a/exercises/02_03_exset_01.tex
+++ b/exercises/02_03_exset_01.tex
@@ -4,15 +4,31 @@
 \exinput{exercises/02_03_ex_11}
 \exinput{exercises/02_03_ex_12}
 \exinput{exercises/02_03_ex_13}
+\exinput{exercises/02_03_ex_59}
 \exinput{exercises/02_03_ex_14}
+\exinput{exercises/02_03_ex_52}
 \exinput{exercises/02_03_ex_15}
+\exinput{exercises/02_03_ex_51}
 \exinput{exercises/02_03_ex_16}
+\exinput{exercises/02_06_ex_08}
+\exinput{exercises/02_05_ex_50}
+\exinput{exercises/02_05_ex_51}
+\exinput{exercises/02_03_ex_53}
+\exinput{exercises/02_05_ex_18}
+\exinput{exercises/02_05_ex_20}
 \exinput{exercises/02_03_ex_17}
+\exinput{exercises/02_03_ex_64}
 \exinput{exercises/02_03_ex_18}
 \exinput{exercises/02_03_ex_19}
 \exinput{exercises/02_03_ex_20}
+\exinput{exercises/02_03_ex_58}
+\exinput{exercises/02_03_ex_56}
 \exinput{exercises/02_03_ex_21}
+\exinput{exercises/02_05_ex_52}
+\exinput{exercises/02_03_ex_54}
+\exinput{exercises/02_03_ex_55}
 \exinput{exercises/02_03_ex_22}
 \exinput{exercises/02_03_ex_23}
 \exinput{exercises/02_03_ex_24}
+\exinput{exercises/02_03_ex_57}
 \exinput{exercises/02_03_ex_25}
