--- a/exercises/02_04_ex_13.tex
+++ b/exercises/02_04_ex_13.tex
@@ -2,7 +2,7 @@
 }
 {\begin{enumerate}
 \item		$h'(s) = \frac{4s^3(0) - 3(12s^2)}{16s^6}$
-\item		$h'(s) = -9/4s^{-4}$
+\item		$h'(s) = -\frac94 s^{-4}$
 \item		They are equal.
 \end{enumerate}
 }
