--- a/exercises/02_05_exercises.tex
+++ b/exercises/02_05_exercises.tex
@@ -7,10 +7,13 @@
 \exinput{exercises/02_05_ex_53}
 \printproblems
 \exsetinput{exercises/02_05_exset_01}
+\exinput{exercises/02_05_ex_54}
 \exsetinput{exercises/02_05_exset_02}
 \exinput{exercises/02_05_ex_31}
 \exinput{exercises/02_05_ex_32}
+\exsetinput{exercises/02_05_exset_03}
 %\exsetinput{exercises/02_03_exset_03}
 \printreview
 \exinput{exercises/02_05_ex_33}
+\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exinput{exercises/02_05_ex_34}
