--- a/exercises/02_05_exset_01.tex
+++ b/exercises/02_05_exset_01.tex
@@ -13,13 +13,19 @@
 \exinput{exercises/02_05_ex_15}
 \exinput{exercises/02_05_ex_16}
 \exinput{exercises/02_05_ex_17}
-\exinput{exercises/02_05_ex_18}
+\exinput{exercises/02_06_ex_06}
+\exinput{exercises/02_05_ex_45}
+\exinput{exercises/02_05_ex_46}
+%\exinput{exercises/02_05_ex_18}
 \exinput{exercises/02_05_ex_19}
-\exinput{exercises/02_05_ex_20}
-\exinput{exercises/02_05_ex_21}
-\exinput{exercises/02_05_ex_42}
-\exinput{exercises/02_05_ex_22}
+%\exinput{exercises/02_05_ex_20}
+%\exinput{exercises/02_05_ex_21}
+%\exinput{exercises/02_05_ex_42}
+%\exinput{exercises/02_05_ex_22}
 \exinput{exercises/02_05_ex_23}
 \exinput{exercises/02_05_ex_24}
+\exinput{exercises/02_05_ex_47}
+\exinput{exercises/02_05_ex_48}
+\exinput{exercises/02_05_ex_49}
 \exinput{exercises/02_05_ex_25}
 \exinput{exercises/02_05_ex_26}
