--- a/exercises/02_06_ex_42.tex
+++ b/exercises/02_06_ex_42.tex
@@ -1,4 +1,4 @@
-{For $y=x^{x^x}$, answer the following.
+{For $y=x^{x^x}$, answer the following.  This problem takes the idea of logarithmic differentiation further.
 \begin{enumerate}
 \item	Determine $\frac{dy}{dx}$ by first taking the natural logarithm of each side \textbf{twice} before applying implicit differentiation.
 \item   Use your answer to (a) to find an equation of the tangent line at $x=2$.
