--- a/exercises/02_06_exset_02.tex
+++ b/exercises/02_06_exset_02.tex
@@ -6,6 +6,8 @@
 \exinput{exercises/02_06_ex_11}
 \exinput{exercises/02_06_ex_12}
 \exinput{exercises/02_06_ex_13}
+\exinput{exercises/02_06_ex_38}
+\exinput{exercises/02_06_ex_39}
 \exinput{exercises/02_06_ex_14}
 \exinput{exercises/02_06_ex_15}
 \exinput{exercises/02_06_ex_16}
