--- a/exercises/02_06_exset_03.tex
+++ b/exercises/02_06_exset_03.tex
@@ -4,5 +4,6 @@
 \exinput{exercises/02_06_ex_23}
 \exinput{exercises/02_06_ex_24}
 \exinput{exercises/02_06_ex_25}
+\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exinput{exercises/02_06_ex_26}
 \exinput{exercises/02_06_ex_27}
