--- a/exercises/02_01_exercises.tex
+++ b/exercises/02_01_exercises.tex
@@ -12,6 +12,7 @@
 \ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exinput{exercises/02_01_ex_25}
 \exsetinput{exercises/02_01_exset_04}
+\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exinput{exercises/02_01_ex_30}
 %\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \printreview
