--- a/exercises/02_03_ex_07.tex
+++ b/exercises/02_03_ex_07.tex
@@ -1,4 +1,4 @@
-{Give an example of a function where $\fp(x) \neq 0$ and $\fpp(x) = 0$.
+{Give an example of a function where $\fp(x) \neq 0$ and $\fpp(x) = 0$ (for all $x$ in the domain).
 }
-{One possible answer is $f(x) = 17x-205$.
+{Answers may vary.
 }
