--- a/exercises/02_03_exercises.tex
+++ b/exercises/02_03_exercises.tex
@@ -3,16 +3,20 @@
 \exinput{exercises/02_03_ex_02}
 \exinput{exercises/02_03_ex_03}
 \exinput{exercises/02_03_ex_04}
+\exinput{exercises/02_03_ex_04a}
 \exinput{exercises/02_03_ex_05}
 \exinput{exercises/02_03_ex_06}
 \exinput{exercises/02_03_ex_07}
+\exinput{exercises/02_03_ex_07a}
 \exinput{exercises/02_03_ex_08}
 \exinput{exercises/02_03_ex_09}
 \exinput{exercises/02_03_ex_10}
 \printproblems
 \exsetinput{exercises/02_03_exset_01}
+%\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exinput{exercises/02_03_ex_50}
 \exsetinput{exercises/02_03_exset_02}
+\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/02_03_exset_03}
 \printreview
 \exinput{exercises/02_03_ex_39}
