--- a/exercises/02_03_exset_02.tex
+++ b/exercises/02_03_exset_02.tex
@@ -4,6 +4,7 @@
 \exinput{exercises/02_03_ex_26}
 \exinput{exercises/02_03_ex_27}
 \exinput{exercises/02_03_ex_28}
+\exinput{exercises/02_03_ex_60}
 \exinput{exercises/02_03_ex_29}
 \exinput{exercises/02_03_ex_30}
 \exinput{exercises/02_03_ex_31}
