--- a/exercises/02_03_exset_03.tex
+++ b/exercises/02_03_exset_03.tex
@@ -7,3 +7,6 @@
 \exinput{exercises/02_03_ex_35}
 \exinput{exercises/02_03_ex_36}
 \exinput{exercises/02_03_ex_37}
+\exinput{exercises/02_03_ex_61}
+\exinput{exercises/02_03_ex_62}
+\exinput{exercises/02_03_ex_63}
