--- a/exercises/02_04_ex_05.tex
+++ b/exercises/02_04_ex_05.tex
@@ -1,4 +1,4 @@
-{T/F: Regardless of the function, there is always exactly one right way of computing its derivative.
+{T/F: Regardless of the function, there is always exactly one correct way of computing its derivative.
 }
 {F
 }
