--- a/exercises/02_04_ex_29.tex
+++ b/exercises/02_04_ex_29.tex
@@ -1,4 +1,4 @@
-{$g(t) = t\sin t$ at $(\frac{3\pi}{2},-\frac{3\pi}{2})$
+{$g(t) = t\sin t$ at $\left(\frac{3\pi}{2},-\frac{3\pi}{2}\right)$
 }
 {Tangent line: $y = -(x-\frac{3\pi}{2}) - \frac{3\pi}{2} = -x$
 
