--- a/exercises/02_04_exercises.tex
+++ b/exercises/02_04_exercises.tex
@@ -2,7 +2,7 @@
 \exinput{exercises/02_04_ex_01}
 \exinput{exercises/02_04_ex_02}
 \exinput{exercises/02_04_ex_03}
-\exinput{exercises/02_04_ex_04}
+%\exinput{exercises/02_04_ex_04}
 \exinput{exercises/02_04_ex_05}
 %\exinput{exercises/02_04_ex_06}
 %\exinput{exercises/02_03_ex_07}
@@ -14,6 +14,7 @@
 \exsetinput{exercises/02_04_exset_02}
 \ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/02_04_exset_03}
+\exsetinput{exercises/02_04_exset_08}
 \exsetinput{exercises/02_04_exset_04}
 \exsetinput{exercises/02_04_exset_05}
 \exsetinput{exercises/02_04_exset_06}
