--- a/exercises/02_04_exset_02.tex
+++ b/exercises/02_04_exset_02.tex
@@ -8,5 +8,7 @@
 }
 \exinput{exercises/02_04_ex_11}
 \exinput{exercises/02_04_ex_12}
+\exinput{exercises/02_05_ex_40x}
+\exinput{exercises/02_05_ex_21x}
 \exinput{exercises/02_04_ex_13}
 \exinput{exercises/02_04_ex_14}
