--- a/exercises/02_04_exset_03.tex
+++ b/exercises/02_04_exset_03.tex
@@ -5,11 +5,19 @@
 \exinput{exercises/02_04_ex_17}
 \exinput{exercises/02_04_ex_18}
 \exinput{exercises/02_04_ex_19}
+\exinput{exercises/02_06_ex_07}
 \exinput{exercises/02_04_ex_20}
 \exinput{exercises/02_04_ex_21}
+\exinput{exercises/02_04_ex_48}
+\exinput{exercises/02_04_ex_49}
 \exinput{exercises/02_04_ex_15}
 \exinput{exercises/02_04_ex_22}
+\exinput{exercises/02_05_ex_41}
+\exinput{exercises/02_04_ex_50}
+\exinput{exercises/02_04_ex_51}
 \exinput{exercises/02_04_ex_23}
+\exinput{exercises/02_05_ex_42}
+\exinput{exercises/02_05_ex_22}
 \exinput{exercises/02_04_ex_46}
 \exinput{exercises/02_04_ex_24}
 \exinput{exercises/02_04_ex_25}
