--- a/exercises/02_06_exercises.tex
+++ b/exercises/02_06_exercises.tex
@@ -1,14 +1,15 @@
 \printconcepts
 \exinput{exercises/02_06_ex_01}
 \exinput{exercises/02_06_ex_02}
-\exinput{exercises/02_06_ex_03}
-\exinput{exercises/02_06_ex_04}
+%\exinput{exercises/02_06_ex_03}
+%\exinput{exercises/02_06_ex_04}
 \printproblems
-\exsetinput{exercises/02_06_exset_01}
+%\exsetinput{exercises/02_06_exset_01}
 \exsetinput{exercises/02_06_exset_02}
 \exinput{exercises/02_06_ex_20}
 \exsetinput{exercises/02_06_exset_03}
 \exsetinput{exercises/02_06_exset_04}
+\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/02_06_exset_05}
 \exinput{exercises/02_06_ex_42}
 %\exinput{exercises/02_05_ex_31}
